change file names

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dropping Dimes</title>
         <meta charset="utf-8">
         <script src="./bundle.js" charset="utf-8"></script>
+        <title>Dropping Dimes</title>
     </head>
     <body>
         <header>
             <h1>Dropping Dimes</h1>
             <h2>An Assist From John Baek To The Brooklyn Nets</h2>
         </header>
-        <div>
-            hello
+        <div id="chart-wrapper">
+            <svg id="chart" width="1000" height="600">
+            </svg>
         </div>
     </body>
 </html>
