add select menu for y and x axes in index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,66 @@
             <h1>Dropping Dimes</h1>
             <h2>An Assist From John Baek To The Brooklyn Nets</h2>
         </header>
+        <div class="side-menu">
+            <div>
+                <h2>X-Axis</h2>
+                <select>
+                    <option class="tsPct" value="tsPct">TS%</option>
+                    <option class="threeRate" value="threeRate">3PAr</option>
+                    <option class="astPct" value="astPct">AST%</option>
+                    <option class="oRbPct" value="oRbPct">ORB%</option>
+                    <option class="dRbPct" value="dRbPct">DRB%</option>
+                    <option class="tRbPct" value="tRbPct">TRB%</option>
+                    <option class="stlPct" value="stlPct">STL%</option>
+                    <option class="blkPct" value="blkPct">BLK%</option>
+                    <option class="usgPct" value="usgPct" selected="true">USG%</option>
+                    <option class="tovPct" value="tovPct">TOV%</option>
+                    <option class="obpm" value="obpm">OBPM</option>
+                    <option class="dbpm" value="dbpm">DBPM</option>
+                    <option class="bpm" value="bpm">BPM</option>
+                    <option class="minutes" value="minutes">Minutes</option>
+                    <option class="fgPct" value="fgPct">FG%</option>
+                    <option class="threePct" value="threePct">3P%</option>
+                    <option class="ftPct" value="ftPct">FT%</option>
+                    <option class="orbPg" value="orbPg">ORB/G</option>
+                    <option class="drbPg" value="drbPg">DRB/G</option>
+                    <option class="trbPg" value="trbPg">REB/G</option>
+                    <option class="astPg" value="astPg">AST/G</option>
+                    <option class="stlPg" value="stlPg">STL/G</option>
+                    <option class="blkPg" value="blkPg">BLK/G</option>
+                    <option class="tovPg" value="tovPg">TOV/G</option>
+                    <option class="ptsPg" value="ptsPg">PTS/G</option>
+                </select>
+                <h2>Y-Axis</h2>
+                <select>
+                    <option class="tsPct" value="tsPct">TS%</option>
+                    <option class="threeRate" value="threeRate">3PAr</option>
+                    <option class="astPct" value="astPct">AST%</option>
+                    <option class="oRbPct" value="oRbPct">ORB%</option>
+                    <option class="dRbPct" value="dRbPct">DRB%</option>
+                    <option class="tRbPct" value="tRbPct" selected="true">TRB%</option>
+                    <option class="stlPct" value="stlPct">STL%</option>
+                    <option class="blkPct" value="blkPct">BLK%</option>
+                    <option class="usgPct" value="usgPct">USG%</option>
+                    <option class="tovPct" value="tovPct">TOV%</option>
+                    <option class="obpm" value="obpm">OBPM</option>
+                    <option class="dbpm" value="dbpm">DBPM</option>
+                    <option class="bpm" value="bpm">BPM</option>
+                    <option class="minutes" value="minutes">Minutes</option>
+                    <option class="fgPct" value="fgPct">FG%</option>
+                    <option class="threePct" value="threePct">3P%</option>
+                    <option class="ftPct" value="ftPct">FT%</option>
+                    <option class="orbPg" value="orbPg">ORB/G</option>
+                    <option class="drbPg" value="drbPg">DRB/G</option>
+                    <option class="trbPg" value="trbPg">REB/G</option>
+                    <option class="astPg" value="astPg">AST/G</option>
+                    <option class="stlPg" value="stlPg">STL/G</option>
+                    <option class="blkPg" value="blkPg">BLK/G</option>
+                    <option class="tovPg" value="tovPg">TOV/G</option>
+                    <option class="ptsPg" value="ptsPg">PTS/G</option>
+                </select>
+            </div>
+        </div>
         <div id="chart-wrapper">
             <svg id="chart" width="800" height="600">
             </svg>
