add x scale and y scale

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="side-menu">
             <div>
                 <h2>X-Axis</h2>
-                <select>
+                <select class="x-selector">
                     <option class="tsPct" value="tsPct">TS%</option>
                     <option class="threeRate" value="threeRate">3PAr</option>
                     <option class="astPct" value="astPct">AST%</option>
@@ -41,7 +41,7 @@
                     <option class="ptsPg" value="ptsPg">PTS/G</option>
                 </select>
                 <h2>Y-Axis</h2>
-                <select>
+                <select class="y-selector">
                     <option class="tsPct" value="tsPct">TS%</option>
                     <option class="threeRate" value="threeRate">3PAr</option>
                     <option class="astPct" value="astPct">AST%</option>
