--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                     <option class="tRbPct" value="tRbPct">TRB%</option>
                     <option class="stlPct" value="stlPct">STL%</option>
                     <option class="blkPct" value="blkPct">BLK%</option>
-                    <option class="usgPct" value="usgPct" selected="true">USG%</option>
+                    <option class="usgPct" value="usgPct">USG%</option>
                     <option class="tovPct" value="tovPct">TOV%</option>
                     <option class="obpm" value="obpm">OBPM</option>
                     <option class="dbpm" value="dbpm">DBPM</option>
                     <option class="bpm" value="bpm">BPM</option>
                     <option class="minutes" value="minutes">Minutes</option>
-                    <option class="fgPct" value="fgPct">FG%</option>
+                    <option class="fgPct" value="fgPct" selected="true">FG%</option>
                     <option class="threePct" value="threePct">3P%</option>
                     <option class="ftPct" value="ftPct">FT%</option>
                     <option class="orbPg" value="orbPg">ORB/G</option>
@@ -47,7 +47,7 @@
                     <option class="astPct" value="astPct">AST%</option>
                     <option class="oRbPct" value="oRbPct">ORB%</option>
                     <option class="dRbPct" value="dRbPct">DRB%</option>
-                    <option class="tRbPct" value="tRbPct" selected="true">TRB%</option>
+                    <option class="tRbPct" value="tRbPct">TRB%</option>
                     <option class="stlPct" value="stlPct">STL%</option>
                     <option class="blkPct" value="blkPct">BLK%</option>
                     <option class="usgPct" value="usgPct">USG%</option>
@@ -58,7 +58,7 @@
                     <option class="minutes" value="minutes">Minutes</option>
                     <option class="fgPct" value="fgPct">FG%</option>
                     <option class="threePct" value="threePct">3P%</option>
-                    <option class="ftPct" value="ftPct">FT%</option>
+                    <option class="ftPct" value="ftPct" selected="true">FT%</option>
                     <option class="orbPg" value="orbPg">ORB/G</option>
                     <option class="drbPg" value="drbPg">DRB/G</option>
                     <option class="trbPg" value="trbPg">REB/G</option>
