style splash page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         </header>
         <div class="side-menu">
             <div class="axis-input">
-                <h2>X-Axis</h2>
-                <select class="x-selector">
+                <h2>X-Axis  </h2>
+                <select class="x-selector vertical-center">
                     <option value="tsPct">TS%</option>
                     <option value="threeRate">3PAr</option>
                     <option value="astPct">AST%</option>
@@ -40,8 +40,8 @@
                     <option value="tovPg">TOV/G</option>
                     <option value="ptsPg">PTS/G</option>
                 </select>
-                <h2>Y-Axis</h2>
-                <select class="y-selector">
+                <h2>Y-Axis  </h2>
+                <select class="y-selector vertical-center">
                     <option value="tsPct">TS%</option>
                     <option value="threeRate">3PAr</option>
                     <option value="astPct">AST%</option>
