change project name to Dishing Dimes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="masterCSS.css">
-        <title>Dropping Dimes</title>
+        <title>Dishing Dimes</title>
     </head>
     <body>
         <header class="centered">
-            <h1>Dropping Dimes</h1>
+            <h1>Dishing Dimes</h1>
             <h2>An Assist From John Baek To The Brooklyn Nets</h2>
         </header>
         <div class="side-menu">
