fix bug where some teams weren't rendering after filter

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="masterCSS.css">
-        <title>Dishing Dimes</title>
+        <title>Alley Oop</title>
     </head>
     <body>
         <header class="centered">
-            <h1>Dishing Dimes</h1>
+            <h1>Alley Oop</h1>
             <h2>An Assist From John Baek To The Brooklyn Nets</h2>
         </header>
         <div class="side-menu">
@@ -75,7 +75,7 @@
                     <option value="ALL" selected="true">All Teams</option>
                     <option value="ATL">Atlanta Hawks</option>
                     <option value="BOS">Boston Celtics</option>
-                    <option value="BKN">Brooklyn Nets</option>
+                    <option value="BRK">Brooklyn Nets</option>
                     <option value="CHO">Charlotte Hornets</option>
                     <option value="CHI">Chicago Bulls</option>
                     <option value="CLE">Cleveland Cavaliers</option>
