center radius header'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <div class="app-wrapper">
         <div class="side-menu">
-            <h2>The Radius Of A Player Is Determined By Average Minutes Played</h2>
+            <h2 class="centered">The Radius Of A Player Is Determined By Average Minutes Played</h2>
             <div class="axis-input">
                 <h2>X-Axis </h2>
                 <select class="x-selector vertical-center">
