change minutes to Tot Min

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <option value="blkPg">BLK/G</option>
                     <option value="tovPg">TOV/G</option>
                     <option value="ptsPg">PTS/G</option>
-                    <option value="minutes">Minutes</option>
+                    <option value="minutes">Tot Min</option>
                 </select>
                 <h2>Y-Axis </h2>
                 <select class="y-selector vertical-center">
@@ -70,7 +70,7 @@
                     <option value="blkPg">BLK/G</option>
                     <option value="tovPg">TOV/G</option>
                     <option value="ptsPg">PTS/G</option>
-                    <option value="minutes">Minutes</option>
+                    <option value="minutes">Tot Min</option>
                 </select>
             </div>
             <div class="centered">
@@ -117,6 +117,8 @@
                 <input type="checkbox" class="two" checked>
                 <label for="3" class="three-label">SF (3)</label>
                 <input type="checkbox" class="three" checked>
+                <br/>
+                <br/>
                 <label for="4" class="four-label">PF (4)</label>
                 <input type="checkbox" class="four" checked>
                 <label for="5" class="five-label">C (5)</label>
