--- a/index.html
+++ b/index.html
@@ -15,6 +15,40 @@
     <div class="app-wrapper">
         <div class="side-menu">
             <h2 class="centered">The Radius Of A Player Is Determined By Average Minutes Played</h2>
+            <div class="centered">
+                <div class="season-filter">
+                    <h2>Select NBA Seasons</h2>
+                    From
+                    <label>
+                        <select class="start-year">
+                            <option value="2010">2010</option>
+                            <option value="2011">2011</option>
+                            <option value="2012">2012</option>
+                            <option value="2013">2013</option>
+                            <option value="2014">2014</option>
+                            <option value="2015">2015</option>
+                            <option value="2016">2016</option>
+                            <option value="2017">2017</option>
+                            <option value="2018" selected>2018</option>
+                        </select>
+                    </label>
+                    <label>
+                        To
+                        <select class="end-year"> 
+                            <option value="2010">2010</option>
+                            <option value="2011">2011</option>
+                            <option value="2012">2012</option>
+                            <option value="2013">2013</option>
+                            <option value="2014">2014</option>
+                            <option value="2015">2015</option>
+                            <option value="2016">2016</option>
+                            <option value="2017">2017</option>
+                            <option value="2018" selected>2018</option>
+                        </select>
+                    </label>
+                </div>
+            </div>
+            <h2 class="centered">Axis Selection</h2>
             <div class="axis-input">
                 <h2>X-Axis </h2>
                 <select class="x-selector vertical-center">
