fix css on axis input

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div>
                 <div class="axis-input">
-                    <h2>X-Axis </h2>
+                    <h2 class="axis-label">X-Axis </h2>
                     <select class="x-selector vertical-center">
                         <option value="tsPct">TS%</option>
                         <option value="threeRate">3PAr</option>
@@ -62,7 +62,7 @@
                         <option value="ptsPg">PTS/G</option>
                         <option value="minutes">Tot Min</option>
                     </select>
-                    <h2>Y-Axis </h2>
+                    <h2 class="axis-label">Y-Axis </h2>
                     <select class="y-selector vertical-center">
                         <option value="tsPct">TS%</option>
                         <option value="threeRate">3PAr</option>
