center text in select

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                 <div class="team-filter-wrapper">
                         <!-- <h2 class="filter-by-team-header">Team</h2> -->
                         <select class="team-filter">
-                            <option value="ALL" selected="true">Show All Teams</option>
+                            <option value="ALL">Show All Teams</option>
                             <option value="ATL">Atlanta Hawks</option>
                             <option value="BOS">Boston Celtics</option>
-                            <option value="BRK">Brooklyn Nets</option>
+                            <option value="BRK" selected="true">Brooklyn Nets</option>
                             <option value="CHO">Charlotte Hornets</option>
                             <option value="CHI">Chicago Bulls</option>
                             <option value="CLE">Cleveland Cavaliers</option>
