style axis selectors

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div>
                 <div class="axis-input">
                     <div class="x-axis-group">
-                        <select class="x-selector vertical-center">
+                        <select class="x-selector vertical-center" size="5">
                             <option value="tsPct">TS%</option>
                             <option value="threeRate">3PAr</option>
                             <option value="astPct">AST%</option>
@@ -73,7 +73,7 @@
                     </div>
                     <hr />
                     <div class="y-axis-group">
-                        <select class="y-selector vertical-center">
+                        <select class="y-selector vertical-center" size="5">
                             <option value="tsPct">TS%</option>
                             <option value="threeRate">3PAr</option>
                             <option value="astPct">AST%</option>
