reset works, still working on bug where remove player does not revert circle back to normal

--- a/index.html
+++ b/index.html
@@ -167,9 +167,12 @@
                 <hr/>
                 <div>
                     <h2 class="centered watch-list-header">Watch List</h2>
-                    <ul class="highlighted-players">
-                    </ul>
-                    <button class="reset-button" type="reset">Reset List</button>
+                    <select class="highlighted-players" size=3>
+                    </select>
+                    <div class="flex-row">
+                        <button class="remove-button" type="reset">Remove</button>
+                        <button class="reset-button" type="reset">Reset</button>
+                    </div>
                 </div>
             </div>
         </div>
