--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
-    <title>Switch Statistics</title>
+    <title>Fast Break Stats</title>
 </head>
 
 <body>
     <header class="centered header">
-        <h1 class="logo">Switch Statistics</h1>
+        <h1 class="logo">Fast Break Stats</h1>
     </header>
     <div class="app-wrapper">
         <div id="chart-wrapper">
