add anchor tag to basketball reference in footer

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </div>
     <footer class="footer centered">
         <div>
-            Data Scraped Using Basketball-Reference.com
+            Data Scraped Using <a class="footer-links" href="https://www.basketball-reference.com" target="_blank">Basketball-Reference</a>
         </div>
         <div>
             Created By <a class="footer-links" href="http://johnbaek.life" target="_blank">John Baek</a>
