change text in Show All Teams to All Teams

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="team-filter-wrapper">
                         <select class="team-filter">
-                            <option value="ALL">Show All Teams</option>
+                            <option value="ALL">All Teams</option>
                             <option value="ATL">Atlanta Hawks</option>
                             <option value="BOS">Boston Celtics</option>
                             <option value="BRK NJN" selected="true">Brooklyn Nets</option>
