update scraper and refresh data

--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
             Data Scraped Using <a class="footer-links" href="https://www.basketball-reference.com" target="_blank">Basketball-Reference</a>
         </div>
         <div>
+            Last Updated 3/10/2018
+        </div>
+        <div>
             Created By <a class="footer-links" href="http://johnbaek.life" target="_blank">John Baek</a>
         </div>
         <div>
