--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="centered header">
         <h1 class="logo">Fast Break</h1>
-        <h2 class="sub-title">An Interactive Graph Of NBA Player Stats</h2>
+        <h2 class="sub-title">An Interactive Comparison Of NBA Player Stats</h2>
     </header>
     <div class="app-wrapper">
         <div id="chart-wrapper">
