start working on information menu

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <h2 class="sub-title">An Interactive Comparison Of NBA Player Stats</h2>
     </header>
     <div class="app-wrapper">
+        <div id="information">
+            <div>Radius Of Circle Determined By Avg Minutes Played</div>
+        </div>
+        <div class="information-open">Information</div>
         <div id="chart-wrapper">
             <svg id="chart" width="860" height="650">
             </svg>
